[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scripts/Center Dashboard/dash-button.gd" type="Script" id=1]
[ext_resource path="res://Sprites/screen-border.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Center Dashboard/center_dashboard.gd" type="Script" id=3]
[ext_resource path="res://Sprites/dash-side-button.png" type="Texture" id=4]
[ext_resource path="res://Sprites/dash-side-button_pressed.png" type="Texture" id=5]
[ext_resource path="res://Fonts/mini-wakuwaku.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Sprites/dash-half1-side-button.png" type="Texture" id=7]
[ext_resource path="res://Sprites/dash-half2-side-button_pressed.png" type="Texture" id=8]
[ext_resource path="res://Sprites/dash-half1-side-button_pressed.png" type="Texture" id=9]
[ext_resource path="res://Sprites/dash-half2-side-button.png" type="Texture" id=10]
[ext_resource path="res://Sprites/knob.png" type="Texture" id=11]
[ext_resource path="res://Scripts/Center Dashboard/knob.gd" type="Script" id=12]
[ext_resource path="res://Sprites/home_pressed.png" type="Texture" id=13]
[ext_resource path="res://Sprites/home.png" type="Texture" id=14]
[ext_resource path="res://Sprites/warning_pressed.png" type="Texture" id=15]
[ext_resource path="res://Sprites/warning.png" type="Texture" id=16]
[ext_resource path="res://Sprites/center-background.png" type="Texture" id=17]
[ext_resource path="res://Scripts/Center Dashboard/Time.gd" type="Script" id=18]
[ext_resource path="res://Scripts/Center Dashboard/Radio_Menu.gd" type="Script" id=19]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 49.9624, 50.9133 )

[sub_resource type="DynamicFont" id=4]
size = 45
font_data = ExtResource( 6 )

[node name="Center" type="Node2D"]
position = Vector2( 0, -1 )
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 334.905, 342.698 )
scale = Vector2( 0.558141, 0.48813 )
texture = ExtResource( 17 )

[node name="Radio" type="TextureButton" parent="."]
margin_left = 72.0054
margin_top = 54.0202
margin_right = 167.005
margin_bottom = 117.02
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( -126.59, -80.8903 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Radio"]
margin_left = 3.0
margin_top = 3.0
margin_right = 92.0
margin_bottom = 59.0
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Radio/CenterContainer"]
margin_left = 6.0
margin_top = 14.0
margin_right = 82.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "Radio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="TextureButton" parent="."]
margin_left = 72.0054
margin_top = 101.02
margin_right = 167.005
margin_bottom = 164.02
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( -126.59, -80.8903 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Music"]
margin_left = 3.0
margin_top = 3.0
margin_right = 92.0
margin_bottom = 59.0
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Music/CenterContainer"]
margin_left = 7.0
margin_top = 14.0
margin_right = 81.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Previous" type="TextureButton" parent="."]
margin_left = 72.0054
margin_top = 148.02
margin_right = 120.005
margin_bottom = 211.02
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( -126.59, -80.8903 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Previous"]
margin_left = 3.0
margin_top = 3.0
margin_right = 48.0
margin_bottom = 59.0
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Previous/CenterContainer"]
margin_left = 7.0
margin_top = 14.0
margin_right = 37.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "<-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="TextureButton" parent="."]
margin_left = 108.005
margin_top = 148.02
margin_right = 155.005
margin_bottom = 211.02
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( -126.59, -80.8903 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 8 )
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Next"]
margin_left = 3.0
margin_top = 3.0
margin_right = 48.0
margin_bottom = 59.0
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Next/CenterContainer"]
margin_left = 7.0
margin_top = 14.0
margin_right = 37.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "->"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Phone" type="TextureButton" parent="."]
margin_left = 848.091
margin_top = 53.8332
margin_right = 943.091
margin_bottom = 116.833
rect_scale = Vector2( -0.75, 0.75 )
rect_pivot_offset = Vector2( -126.59, -80.8903 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Phone"]
margin_left = 91.7215
margin_top = 3.75086
margin_right = 180.721
margin_bottom = 59.7509
rect_scale = Vector2( -1, 1 )
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Phone/CenterContainer"]
margin_left = 3.0
margin_top = 14.0
margin_right = 84.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "Phone"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map" type="TextureButton" parent="."]
margin_left = 848.091
margin_top = 100.833
margin_right = 943.091
margin_bottom = 163.833
rect_scale = Vector2( -0.75, 0.75 )
rect_pivot_offset = Vector2( -126.59, -80.8903 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Map"]
margin_left = 91.7215
margin_top = 3.75086
margin_right = 180.721
margin_bottom = 59.7509
rect_scale = Vector2( -1, 1 )
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Map/CenterContainer"]
margin_left = 17.0
margin_top = 14.0
margin_right = 71.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "Map"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="."]
margin_left = 848.091
margin_top = 147.833
margin_right = 943.091
margin_bottom = 210.833
rect_scale = Vector2( -0.75, 0.75 )
rect_pivot_offset = Vector2( -126.59, -80.8903 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Settings"]
margin_left = 92.0
margin_top = 4.0
margin_right = 180.0
margin_bottom = 60.0
rect_scale = Vector2( -1, 1 )
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/CenterContainer"]
margin_top = 17.0
margin_right = 88.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="TextureButton" parent="."]
margin_left = 285.645
margin_top = 399.893
margin_right = 380.645
margin_bottom = 462.893
rect_pivot_offset = Vector2( -126.59, -80.8903 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 13 )
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Home"]
margin_left = 3.0
margin_top = 3.0
margin_right = 92.0
margin_bottom = 59.0
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Home/CenterContainer"]
visible = false
margin_left = 9.0
margin_top = 14.0
margin_right = 80.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "Home"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume_Control" type="Area2D" parent="."]
position = Vector2( 76.3579, 257.401 )
rotation = -2.35619
scale = Vector2( 0.65, 0.65 )
script = ExtResource( 12 )

[node name="Label" type="Label" parent="Volume_Control"]
visible = false
margin_right = 101.0
margin_bottom = 14.0
text = "Volume_Control"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Volume_Control"]
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Volume_Control"]
visible = false
rotation = 2.35619
shape = SubResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="Volume_Control"]
visible = false
margin_left = 27.0265
margin_top = -0.838074
margin_right = 67.0265
margin_bottom = 39.1619
rect_rotation = 135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Volume_Control/CenterContainer"]
margin_left = 15.0
margin_top = 12.0
margin_right = 23.0
margin_bottom = 26.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Radio_Control" type="Area2D" parent="."]
position = Vector2( 592.358, 257.401 )
rotation = -2.35619
scale = Vector2( 0.65, 0.65 )
script = ExtResource( 12 )
min_rot = -3600
max_rot = 3600
sensitivity = 1.0

[node name="Label" type="Label" parent="Radio_Control"]
visible = false
margin_left = 347.421
margin_top = -347.424
margin_right = 448.421
margin_bottom = -333.424
text = "Radio_Control"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Radio_Control"]
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Radio_Control"]
visible = false
rotation = 2.35619
shape = SubResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="Radio_Control"]
visible = false
margin_left = 27.0265
margin_top = -0.838074
margin_right = 67.0265
margin_bottom = 39.1619
rect_rotation = 135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Radio_Control/CenterContainer"]
margin_left = 15.0
margin_top = 12.0
margin_right = 23.0
margin_bottom = 26.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Air_Temp" type="Area2D" parent="."]
position = Vector2( 114.892, 506.511 )
rotation = -2.35619
scale = Vector2( 1.125, 1.125 )
script = ExtResource( 12 )

[node name="Label" type="Label" parent="Air_Temp"]
visible = false
margin_left = 359.149
margin_top = -141.034
margin_right = 460.149
margin_bottom = -127.034
text = "Air_Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Air_Temp"]
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Air_Temp"]
visible = false
rotation = 2.35619
shape = SubResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="Air_Temp"]
visible = false
margin_left = 27.0265
margin_top = -0.838074
margin_right = 67.0265
margin_bottom = 39.1619
rect_rotation = 135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Air_Temp/CenterContainer"]
margin_left = 15.0
margin_top = 12.0
margin_right = 23.0
margin_bottom = 26.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Air_Flow" type="Area2D" parent="."]
position = Vector2( 333.435, 515.511 )
rotation = -2.35619
scale = Vector2( 0.625, 0.625 )
script = ExtResource( 12 )

[node name="Label" type="Label" parent="Air_Flow"]
visible = false
margin_left = 437.779
margin_top = -45.1708
margin_right = 538.779
margin_bottom = -31.1708
text = "Air_Flow"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Air_Flow"]
visible = false
rotation = 2.35619
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Air_Flow"]
texture = ExtResource( 11 )

[node name="CenterContainer" type="CenterContainer" parent="Air_Flow"]
visible = false
margin_left = 27.0265
margin_top = -0.838074
margin_right = 67.0265
margin_bottom = 39.1619
rect_rotation = 135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Air_Flow/CenterContainer"]
margin_left = 15.0
margin_top = 12.0
margin_right = 23.0
margin_bottom = 26.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Air_Speed" type="Area2D" parent="."]
position = Vector2( 546.892, 506.511 )
rotation = -2.35619
scale = Vector2( 1.125, 1.125 )
script = ExtResource( 12 )

[node name="Label" type="Label" parent="Air_Speed"]
visible = false
margin_left = 359.149
margin_top = -141.034
margin_right = 460.149
margin_bottom = -127.034
text = "Air_Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Air_Speed"]
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Air_Speed"]
visible = false
rotation = 2.35619
shape = SubResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="Air_Speed"]
visible = false
margin_left = 27.0265
margin_top = -0.838074
margin_right = 67.0265
margin_bottom = 39.1619
rect_rotation = 135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Air_Speed/CenterContainer"]
margin_left = 15.0
margin_top = 12.0
margin_right = 23.0
margin_bottom = 26.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warning" type="TextureButton" parent="."]
margin_left = 275.645
margin_top = 566.893
margin_right = 370.645
margin_bottom = 629.893
rect_scale = Vector2( 1.196, 0.732 )
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 15 )
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Warning"]
margin_left = 3.0
margin_top = 3.0
margin_right = 92.0
margin_bottom = 59.0
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Warning/CenterContainer"]
visible = false
margin_left = -11.0
margin_top = 14.0
margin_right = 100.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "Warning"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Radio_Menu" type="Node2D" parent="."]
position = Vector2( 334.499, 180.433 )
script = ExtResource( 19 )

[node name="Center Background" type="Sprite" parent="Radio_Menu"]
scale = Vector2( 0.558141, 0.48813 )
texture = ExtResource( 2 )

[node name="Preset1" type="TextureButton" parent="Radio_Menu"]
margin_left = -184.129
margin_top = -119.467
margin_right = -89.1295
margin_bottom = -56.4676
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( -126.59, -80.8903 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Radio_Menu/Preset1"]
margin_left = 3.0
margin_top = 3.0
margin_right = 92.0
margin_bottom = 59.0
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Radio_Menu/Preset1/CenterContainer"]
margin_left = 14.0
margin_top = 14.0
margin_right = 75.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "92.3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preset2" type="TextureButton" parent="Radio_Menu"]
margin_left = -183.859
margin_top = -72.8334
margin_right = -88.8596
margin_bottom = -9.83362
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( -126.59, -80.8903 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Radio_Menu/Preset2"]
margin_left = 3.0
margin_top = 3.0
margin_right = 92.0
margin_bottom = 59.0
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Radio_Menu/Preset2/CenterContainer"]
margin_left = 14.0
margin_top = 14.0
margin_right = 75.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "96.5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preset3" type="TextureButton" parent="Radio_Menu"]
margin_left = -183.935
margin_top = -25.282
margin_right = -88.9356
margin_bottom = 37.7178
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( -126.59, -80.8903 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Radio_Menu/Preset3"]
margin_left = 3.0
margin_top = 3.0
margin_right = 92.0
margin_bottom = 59.0
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Radio_Menu/Preset3/CenterContainer"]
margin_left = 5.0
margin_top = 14.0
margin_right = 84.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "103.5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AM" type="TextureButton" parent="Radio_Menu"]
margin_left = -42.505
margin_top = 112.781
margin_right = 52.4946
margin_bottom = 175.781
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( -126.59, -80.8903 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Radio_Menu/AM"]
margin_left = 3.0
margin_top = 3.0
margin_right = 92.0
margin_bottom = 59.0
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Radio_Menu/AM/CenterContainer"]
margin_left = 23.0
margin_top = 14.0
margin_right = 66.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "AM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FM" type="TextureButton" parent="Radio_Menu"]
margin_left = 28.959
margin_top = 112.938
margin_right = 123.959
margin_bottom = 175.938
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( -126.59, -80.8903 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Radio_Menu/FM"]
margin_left = 3.0
margin_top = 3.0
margin_right = 92.0
margin_bottom = 59.0
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Radio_Menu/FM/CenterContainer"]
margin_left = 25.0
margin_top = 14.0
margin_right = 64.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "FM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Radio_Menu"]
margin_left = -216.0
margin_top = -102.0
margin_right = 215.0
margin_bottom = 71.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Station" type="Label" parent="Radio_Menu/CenterContainer"]
margin_left = 161.0
margin_top = 63.0
margin_right = 270.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 4 )
text = "00.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeContainer" type="CenterContainer" parent="."]
margin_left = 119.0
margin_top = 39.5969
margin_right = 550.0
margin_bottom = 55.5969
mouse_filter = 2
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="TimeContainer"]
margin_left = 197.0
margin_top = 1.0
margin_right = 233.0
margin_bottom = 15.0
text = "00:00"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Radio" to="Radio" method="_on_Button_pressed"]
[connection signal="pressed" from="Music" to="Music" method="_on_Button_pressed"]
[connection signal="pressed" from="Previous" to="Previous" method="_on_Button_pressed"]
[connection signal="pressed" from="Next" to="Next" method="_on_Button_pressed"]
[connection signal="pressed" from="Phone" to="Phone" method="_on_Button_pressed"]
[connection signal="pressed" from="Map" to="Map" method="_on_Button_pressed"]
[connection signal="pressed" from="Settings" to="Settings" method="_on_Button_pressed"]
[connection signal="pressed" from="Home" to="Home" method="_on_Button_pressed"]
[connection signal="input_event" from="Volume_Control" to="Volume_Control" method="_on_LeftKnob_input_event"]
[connection signal="input_event" from="Radio_Control" to="Radio_Control" method="_on_LeftKnob_input_event"]
[connection signal="rotation_decrease" from="Radio_Control" to="Radio_Menu" method="_on_Radio_Control_rotation_decrease"]
[connection signal="rotation_increase" from="Radio_Control" to="Radio_Menu" method="_on_Radio_Control_rotation_increase"]
[connection signal="input_event" from="Air_Temp" to="Air_Temp" method="_on_LeftKnob_input_event"]
[connection signal="input_event" from="Air_Flow" to="Air_Flow" method="_on_LeftKnob_input_event"]
[connection signal="input_event" from="Air_Speed" to="Air_Speed" method="_on_LeftKnob_input_event"]
[connection signal="activated" from="Warning" to="." method="_on_Warning_activated"]
[connection signal="pressed" from="Warning" to="Warning" method="_on_Button_pressed"]
[connection signal="activated" from="Radio_Menu/Preset1" to="Radio_Menu" method="_on_preset_activated"]
[connection signal="pressed" from="Radio_Menu/Preset1" to="Radio_Menu/Preset1" method="_on_Button_pressed"]
[connection signal="activated" from="Radio_Menu/Preset2" to="Radio_Menu" method="_on_preset_activated"]
[connection signal="pressed" from="Radio_Menu/Preset2" to="Radio_Menu/Preset2" method="_on_Button_pressed"]
[connection signal="activated" from="Radio_Menu/Preset3" to="Radio_Menu" method="_on_preset_activated"]
[connection signal="pressed" from="Radio_Menu/Preset3" to="Radio_Menu/Preset3" method="_on_Button_pressed"]
[connection signal="activated" from="Radio_Menu/AM" to="Radio_Menu" method="_on_AM_activated"]
[connection signal="pressed" from="Radio_Menu/AM" to="Radio_Menu/AM" method="_on_Button_pressed"]
[connection signal="activated" from="Radio_Menu/FM" to="Radio_Menu" method="_on_FM_activated"]
[connection signal="pressed" from="Radio_Menu/FM" to="Radio_Menu/FM" method="_on_Button_pressed"]
